# banana-protocol

./: .dockerignore  DATABASE_SETUP.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  task_description.md
app/: database.py  main.py
app/api/: dependencies.py
app/api/models/: metric_models.py  sensor_models.py
app/api/routers/: health.py  metrics.py  sensors.py
app/services/: metrics_manager.py  sensors_manager.py
app/shared/: __init__.py  exceptions.py  models.py
app/storage/: __init__.py  database_config.py  database_models.py  repository_factory.py
app/storage/implementations/: in_memory_metric_repository.py  in_memory_sensor_repository.py  postgresql_metric_repository.py  postgresql_sensor_repository.py
app/storage/interfaces/: metric_repository.py  sensor_repository.py
scripts/: init_database.py
tests/: conftest.py
tests/integration/api/routers/: conftest.py  test_metrics.py  test_sensors.py
tests/unit/services/: conftest.py  test_metric_manager.py  test_sensor_manager.py
tests/unit/storage/: conftest.py
tests/unit/storage/implementations/: conftest.py  test_postgresql_sensor_repository.py
